Добавлен гайд по инсталляции

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
+# Database Configuration
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/kinovzor
 DATABASE_ECHO=False
+
+# Server Configuration
+SERVER_HOST=127.0.0.1
+SERVER_PORT=8000
