Изменение БД с PostgreSQL на SQLite

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Database Configuration
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/kinovzor
+# SQLite Database Configuration (Default)
+DATABASE_URL=sqlite+aiosqlite:///./kinovzor.db
 DATABASE_ECHO=False
 
 # Server Configuration
